--- a/writeups/ctf/internetwatche-2016-ctf-a-numbers-game-code-50/index.html
+++ b/writeups/ctf/internetwatche-2016-ctf-a-numbers-game-code-50/index.html
@@ -273,7 +273,7 @@ this.</p>
       </div><!-- /.list-item -->
     
       <div class="list-item">
-        <h4><a href="/writeups/ctf/internetwatche-2016-ctf-replace-with-grace-web-60/" title="InternetWatche 2016 CTF - Replace with Grace (Web 60)">InternetWatche 2016 CTF - Replace with Grace (Web 60)</a></h4>
+        <h4><a href="/writeups/ctf/internetwatche-2016-ctf-rubys-count-exp-50/" title="InternetWatche 2016 CTF - Ruby's Count (Exp 50)">InternetWatche 2016 CTF - Ruby's Count (Exp 50)</a></h4>
         <span>Published on February 22, 2016</span>
       </div><!-- /.list-item -->
     
