--- a/writeups/ctf/internetwatche-2016-ctf-replace-with-grace-web-60/index.html
+++ b/writeups/ctf/internetwatche-2016-ctf-replace-with-grace-web-60/index.html
@@ -245,7 +245,7 @@ which works as <code class="highlighter-rouge">eval()</code>.</p>
       </div><!-- /.list-item -->
     
       <div class="list-item">
-        <h4><a href="/writeups/ctf/internetwatche-2016-ctf-quick-run-misc-60/" title="InternetWatche 2016 CTF - Quick Run (Misc 60)">InternetWatche 2016 CTF - Quick Run (Misc 60)</a></h4>
+        <h4><a href="/writeups/ctf/internetwatche-2016-ctf-rubys-count-exp-50/" title="InternetWatche 2016 CTF - Ruby's Count (Exp 50)">InternetWatche 2016 CTF - Ruby's Count (Exp 50)</a></h4>
         <span>Published on February 22, 2016</span>
       </div><!-- /.list-item -->
     
